fix: UI testing found a media query bug for overflow in 991px screen size which caused smartphone issues

--- a/personal_portfolio/assets/css/media_queries.css
+++ b/personal_portfolio/assets/css/media_queries.css
@@ -243,7 +243,7 @@
     }
 
     .resume-rightside-content {
-        height: 50vh;
+        max-height: 50vh;
     }
 
     .resume-rightside-content p {
